[build-system]
requires = ["setuptools>=64,<75"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-portage"
version = "0.2.3"
description = "Portable Claude Code workspace archives"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{ name = "Eric Bowman" }]
readme = "README.md"
keywords = ["claude", "claude-code", "portable", "archive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
]

[project.scripts]
claude-portage = "claude_portage:main"
